--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,5 @@ vs2019_project/ft2-clone/Debug/ft2-clone.vcxproj.FileListAbsolute.txt
 *.enc
 release/macos/ft2-clone-macos.app/Contents/MacOS/ft2-clone-macos
 plugin/build/
+plugin/build-*
 plugin/helpdata/ft2hlp_to_h
