Nit: more info on release page about installation on macos

--- a/.github/workflows/build-plugin.yml
+++ b/.github/workflows/build-plugin.yml
@@ -212,6 +212,26 @@ jobs:
             
             **macOS**: Universal binary (Intel + Apple Silicon), requires macOS 11.0+
             **macOS Legacy**: Intel only, requires macOS 10.14+
+
+            **macOS installation instructions**: The plugins aren't signed, so you need to:
+
+            1. Load the plugin, you'll get a warning message
+            2. Open System Settings > Privacy & Security
+            3. Scroll down to find Fasttracker II and click "Allow anyway"
+
+            OR run:
+
+            (change these to ~Library if you installed to your home directory)
+
+            VST3:
+            ```
+            sudo xattr -r -d com.apple.quarantine "/Library/Audio/Plug-Ins/VST3/Fasttracker II.vst3"
+            ```
+
+            AU:
+            ```
+            sudo xattr -r -d com.apple.quarantine "/Library/Audio/Plug-Ins/Components/Fasttracker II.component"
+            ```
           files: |
             FT2-Plugin-${{ needs.version.outputs.version }}-VST3-macOS.zip
             FT2-Plugin-${{ needs.version.outputs.version }}-AU-macOS.zip
